# nomissmayhem

./: .env.development.local  .gitignore  README.md  index.html  package.json  vercel.json
api/: Cargo.toml
api/src/: main.rs
public/js/: Game.js  constants.js  levels.js  main.js
public/js/gameDesign/: levelone.js  leveltwo.js  testLevel.js  tutorial.js
public/js/player/: Player.js
public/js/rendering/: Renderer.js  motionBlur.js  pixelPlayer.js
public/js/structs/: Coin.js  Enemy.js  Projectile.js  Rooms.js
public/js/ui/: gameover.js  leaderboard.js  minimap.js  startscreen.js
public/js/util/: Music.js  updateHealth.js  utils.js
public/styles/: styles.css
