[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-shared-db = "0.5.0"
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
shuttle-runtime = "0.49.0"
shuttle-axum = "0.49.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls"] }
shuttle-persist = "0.49.0"
